# SimpleSceneTransition

./: CMakeLists.txt
include/: CommonData.hpp  GameLoop.hpp  Scene.hpp  SceneManager.hpp
src/main/: CMakeLists.txt  Game.cpp  GameLoop.cpp  SceneManager.cpp  Title.cpp
src/test/: CMakeLists.txt  main.cpp
